--- a/fullImplementation/package.json
+++ b/fullImplementation/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^8.6.0",
     "express": "^4.17.1",
     "iso-3166-2": "^1.0.0",
+    "jsonwebtoken": "^9.0.2",
     "node-fetch": "^2.6.7",
     "path": "^0.12.7",
     "swagger-jsdoc": "^6.2.8",
@@ -24,6 +25,7 @@
     "@types/config": "^3.3.2",
     "@types/express": "^4.17.20",
     "@types/iso-3166-2": "^1.0.2",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.8.9",
     "@types/node-fetch": "^2.6.7",
     "@types/swagger-jsdoc": "^6.0.2",
