--- a/basicImplementation/package.json
+++ b/basicImplementation/package.json
@@ -31,6 +31,7 @@
     "@types/uuid": "^9.0.6",
     "cross-env": "^7.0.3",
     "nodemon": "^2.0.19",
+    "prettier": "^3.2.5",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
